# scrapy-selenium

./: .editorconfig  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
examples/: SeleniumRequest.ipynb
scrapy_selenium/: __init__.py  defaults.py  http.py  middlewares.py
tests/: test_middlewares.py
