[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "mypy>=0.991",
    "autopep8>=2.0.1",
    "flake8>=6.0.0",
    "black>=22.12.0",
    "pre-commit>=2.20.0",
]
test = [
    "pytest>=3.4.0",
    "pytest-cov>=2.4.0",
    "pytest-asyncio>=0.12.0",
    "faker>=15.3.4",
    "hypothesis>=6.61.0",
]
[tool.pdm.scripts]
test = "pytest -v"

[project]
name = "scrapy-selenium"
version = "0.0.8"
description = "Scrapy with selenium"
authors = [{ name = "Zachary Wilson", email = "wilsonze@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["scrapy>=1.0.0", "selenium>=3.9.0"]
[project.urls]
Homepage = "https://github.com/zack-wilson/scrapy-selenium"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

# [tool.pytest.ini_options]
# adopts = "--cov=scrapy_selenium --cov-report=term-missing"
# testpaths = ["tests"]
