[project]
name = "scrapy-selenium"
dynamic = ["version"]
description = "Scrapy with selenium"
authors = [{ name = "Zachary Wilson", email = "wilsonze@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["scrapy>=1.0.0", "selenium>=3.9.0"]
[project.urls]
Homepage = "https://github.com/zack-wilson/scrapy-selenium"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "scm" }
[tool.pdm.dev-dependencies]
lint = [
    "mypy>=0.991",
    "autopep8>=2.0.1",
    "flake8>=6.0.0",
    "black>=22.12.0",
    "pre-commit>=2.20.0",
]
test = [
    "pytest>=3.4.0",
    "pytest-cov>=2.4.0",
    "pytest-asyncio>=0.12.0",
    "pytest-xdist>=3.3.1",
]
dev = [
    "ipykernel>=6.24.0",
]
[tool.pdm.scripts]
test = "pytest -v"

[tool.pytest.ini_options]
addopts = """
-n=4
-ra
--junit-xml=cover/junit.xml
--durations=0
--cov-branch
--cov=scrapy_selenium
--cov-report=term-missing
--cov-report=xml:cover/coverage.xml
--cov-report=html:cover/html
"""
testpaths = ["tests"]
